--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -1736,3 +1736,311 @@ main code start here
       }
    }
 }
+
+
+//closing_cost_calculator
+#closing_cost_calculator{
+   padding: 50px 0px 100px 0px;
+   background-color: #fff;
+   .top_page_title{
+      h3{
+         font-weight: 600;
+         font-size: 24px;
+      }
+      p{
+         margin-top: 15px;
+         font-size: 15px;
+         line-height: 25px;
+         width: 90%;
+      }
+   }
+   .closing_cost_top_form{
+      margin-top: 30px;
+      background-color: $tbg;
+      border-radius: 7px;
+      padding: 30px 70px 30px 20px;
+      .top_form_title{
+         h4{
+            font-weight: 600;
+            font-size: 15px;
+         }
+      }
+      .main_form_box{
+         margin-top: 20px;
+         .form_item{
+            display: flex;
+            justify-content: space-between;
+            .label_box{
+               label{
+                  font-size: 15px;
+                  color: $titleColor;
+               }
+            }
+            .input_box{
+               width: 200px;
+               .normal_input{
+                  input{
+                     height: 40px;
+                     width: 100%;
+                     border: none;
+                     border-radius: 5px;
+                     background-color: #fff;
+                     font-weight: 600;
+                     font-size: 14px;
+                     padding: 0px 15px;
+                  }
+                  .current{
+                     font-size: 14px;
+                  }
+                  .nice-select{
+                     display: block;
+                     margin-bottom: 15px;
+                  }
+               }
+               .range_input{
+                  margin-top: 20px;
+               }
+            }
+         }
+         .form_option_3{
+            .form_option_3_flex{
+               width: 100%;
+               display: flex;
+               justify-content: flex-end;
+               gap: 18px;
+               .form_3_box{
+                  font-size: 15px;
+                  .form-check{
+                     cursor: pointer;
+                  }
+                  .form-check-input:checked {
+                     background-color: $mainColor;
+                     border-color: $mainColor;
+                 }
+               }
+            }
+         }
+      }
+   }
+   .closing_cost_work_sheet{
+      margin-top: 30px;
+      .work_sheet_title{
+         h3{
+            font-weight: 600;
+            font-size: 24px;
+         }
+      }
+      .work_sheet_main_top_title{
+         margin-top: 20px;
+         background-color: #EAEBEB;
+         padding: 15px 20px;
+         border-radius: 7px;
+         p{
+            font-weight: 500;
+            font-size: 15px;
+         }
+      }
+   }
+   .closing_cost_bottom_form{
+      margin-top: 30px;
+      .form_start_heading{
+         margin-bottom: 30px;
+         h4{
+            font-weight: 600;
+            font-size: 16px;
+         }
+      }
+      .form_start_heading2{
+         margin-top: 30px;
+      }
+      .form_title_heading{
+         background-color: $tbg;
+         border-radius: 7px;
+         padding: 15px 0px;
+         p{
+            font-weight: 500;
+            font-size: 15px;
+         }
+         .bold{
+            font-weight: 600;
+         }
+      }
+      .form_title_heading{
+         margin-bottom: 20px;
+      }
+      .form_main_input_box{
+         padding: 20px 0px;
+         width: 75%;
+         float: right;
+         .input_box{
+            margin-bottom: 15px;
+            p{
+               font-size: 14px;
+               color: $titleColor;
+               input{
+                  width: 60px;
+                  height: 40px;
+                  border: 1px solid #ddd;
+                  border-radius: 5px;
+                  background-color: #fff;
+                  font-weight: 600;
+                  font-size: 14px;
+                  padding: 0px 15px;
+               }
+            }
+            input{
+               height: 40px;
+               width: 100%;
+               border: 1px solid #ddd;
+               border-radius: 5px;
+               background-color: #fff;
+               font-weight: 600;
+               font-size: 14px;
+               padding: 0px 15px;
+            }
+            h3{
+               font-weight: 600;
+               font-size: 15px;
+               padding-left: 15px;
+            }
+         }
+      }
+      .calculate_action_btn{
+         margin-top: 30px;
+         button{
+            width: 300px;
+         }
+      }
+   }
+   .closing_cost_chart_area{
+      .top_title_chart_area{
+         border-bottom: 1px solid #373d3f85;
+         padding-bottom: 20px;
+         h3{
+            font-weight: 600;
+            font-size: 14px;
+            span{
+               color: $mainColor;
+               font-size: 16px;
+               margin-left: 4px;
+            }
+         }
+      }
+      .main_chart_wrapper{
+         margin-top: 30px;
+         .canvas_area{
+            h4{
+               font-weight: 600;
+               font-size: 15px;
+            }
+            #closing_cost_pie_chart{
+               height: 350px;
+               margin-top: 20px;
+            }
+            .main_value{
+               margin-top: 25px;
+               h3{
+                  font-weight: 600;
+                  font-size: 15px;
+               }
+            }
+         }
+         .closing_cost_chart_result{
+            width: 70%;
+            margin-top: 40px;
+            .list_box{
+               display: flex;
+               justify-content: flex-start;
+               margin-bottom: 20px;
+               padding-right: 30px;
+               .list_circle{
+                  .circle{
+                     height: 15px;
+                     width: 15px;
+                     background-color: $mainColor;
+                     border-radius: 50%;
+                     position: relative;
+                     top: 4px;
+                  }
+                  .corcle_2{
+                     background-color: #848CC3;
+                  }
+               }
+               .list_info{
+                  padding-left: 20px;
+                  flex: 1;
+                  h4{
+                     font-weight: 600;
+                     font-size: 16px;
+                  }
+                  p{
+                     font-size: 14px;
+                     line-height: 24px;
+                     margin-top: 10px;
+                     width: 90%;
+                  }
+                  a{
+                     color: $mainColor;
+                     font-weight: 600;
+                     font-size: 14px;
+                     display: inline-block;
+                     margin-top: 10px;
+                     &:hover{
+                        text-decoration: underline;
+                     }
+                  }
+               }
+               .list_price{
+                  h5{
+                     font-weight: 600;
+                     font-size: 17px;
+                  }
+               }
+            }
+            .total_cost_closing{
+               display: flex;
+               justify-content: space-between;
+               border-top: 1px solid #373d3f60;
+               padding-top: 20px;
+               h4{
+                  flex: 1;
+                  padding-left: 34px;
+                  font-weight: 600;
+                  font-size: 15px;
+               }
+               h3{
+                  text-align: right;
+                  font-size: 17px;
+                  font-weight: 600;
+                  padding-right: 30px;
+               }
+            }
+            .sttelment_cost{
+               margin-top: 30px;
+               background-color: $tbg;
+               border-radius: 7px;
+               padding: 25px 30px;
+               display: flex;
+               justify-content: space-between;
+               align-items: center;
+               .left_box{
+                  h4{
+                     font-weight: 600;
+                     font-size: 17px;
+                  }
+                  p{
+                     font-size: 12px;
+                     margin-top: 3px;
+                  }
+               }
+               .price_sattelmant{
+                  h3{
+                     font-size: 17px;
+                     font-weight: 600;
+                  }
+               }
+            }
+         }
+      }
+   }
+}
